--- a/sass/reset/_reset.scss
+++ b/sass/reset/_reset.scss
@@ -5,9 +5,14 @@
     font-family: "Noto Serif TC";
 }
 
+body {
+    overflow-x: hidden;
+}
+
 a {
     color: #000;
     text-decoration: none;
+    cursor: pointer;
 }
 
 img {
