--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,7 +27,7 @@ $color-red: #951205;
             }
         }
         .rightPage {
-            align-self: center
+            align-self: center;
         }
         &_f2e {
             @include flexCenter;
@@ -106,7 +106,7 @@ $color-red: #951205;
         transform: translateX(-50%);
         &_img {
             @include size(670px,
-            560px)
+            560px);
         }
         &_text {
             position: absolute;
@@ -158,8 +158,21 @@ $color-red: #951205;
     }
 }
 
+.largeBar {
+    font-size: 60px;
+    font-weight: 900;
+    color: #fff;
+    background-color: $color-brown;
+    padding: 40px;
+    width: 110%;
+    text-align: center;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .guide {
-    background: url('../img/largebg.png') no-repeat center / cover;
+    background: url("../img/largebg.png") no-repeat center / cover;
     @include size(100%,
     6535px);
     padding: 85px 40px 0;
@@ -182,11 +195,217 @@ $color-red: #951205;
         position: relative;
         &:before {
             position: absolute;
-            content: '';
+            content: "";
             @include size(100%,
             4px);
             background-color: $color-brown;
             bottom: -8px;
         }
+    }
+    .company {
+        background: url("../img/companybg.png") no-repeat center / 100% 100%;
+        @include size(100%,
+        530px);
+        padding: 15px 45px 0;
+        &.signName {
+            margin: 40px 0;
+        }
+        &.company3 {
+            margin-bottom: 175px;
+        }
+        &_nav {
+            @include flexCenter;
+            justify-content: space-between;
+            .logoName {
+                font-size: 44px;
+                color: #fff;
+                font-weight: 700;
+                span {
+                    margin-left: 20px;
+                }
+            }
+        }
+        &_context {
+            @include flexCenter;
+            justify-content: flex-start;
+            padding: 70px 0 0 120px;
+            .logoImg {
+                &.mouse {
+                    position: relative;
+                    @include size(313px,
+                    290px);
+                    &:before {
+                        position: absolute;
+                        content: "";
+                        @include size(60px,
+                        98px);
+                        left: 50%;
+                        bottom: 8%;
+                        transform: translateX(-50%);
+                        background: url("../img/companyimg1.png") no-repeat center / contain;
+                    }
+                }
+                &.logoImg2 {
+                    @include size(218px,
+                    282px);
+                }
+                &.logoImg3 {
+                    @include size(297px,
+                    245px);
+                }
+            }
+            .textBox {
+                margin-left: 87px;
+                h2 {
+                    font-size: 44px;
+                    color: $color-brown;
+                    font-weight: 900;
+                }
+                p {
+                    font-size: 24px;
+                    color: $color-brown;
+                    margin: 20px 0;
+                }
+                .btnBox {
+                    @include flexCenter;
+                    >a {
+                        color: $color-brown;
+                        border: 3px solid $color-brown;
+                        font-size: 28px;
+                        border-radius: 30px;
+                        @include size(180px,
+                        70px);
+                        @include flexCenter;
+                        box-shadow: 0 3px 3px rgba(#000, 0.3);
+                    }
+                    .article {
+                        color: #fff;
+                        background-color: $color-red;
+                        border: none;
+                        margin-left: 20px;
+                    }
+                }
+            }
+        }
+    }
+    .timeRange {
+        ul {
+            display: flex;
+            align-items: baseline;
+            justify-content: space-around;
+            position: relative;
+            margin-top: 90px;
+            &:before {
+                position: absolute;
+                content: '';
+                @include size(75%,
+                5px);
+                background-color: $color-brown;
+                top: 36%;
+            }
+            &.justifyCenter {
+                justify-content: center;
+                width: fit-content;
+                margin: 90px auto 0;
+                li+li {
+                    margin-left: 214px;
+                }
+                &:before {
+                    top: 45%
+                }
+            }
+            li {
+                @include flexCenter;
+                flex-direction: column;
+                .title {
+                    font-size: 30px;
+                    color: $color-brown;
+                    margin-bottom: 20px;
+                }
+                .square {
+                    @include size(49px);
+                    transform: rotate(45deg);
+                    background-color: $color-brown;
+                }
+                .describe {
+                    font-size: 24px;
+                    color: $color-brown;
+                    line-height: 2;
+                    margin-top: 30px;
+                }
+            }
+        }
+        &_des {
+            text-align: center;
+            font-size: 28px;
+            color: $color-brown;
+            line-height: 2;
+            margin: 45px 0 90px;
+        }
+    }
+    .gradeBox {
+        @include flexCenter;
+        margin-top: 90px;
+        &_item {
+            &.item2 {
+                margin: 0 20px;
+            }
+            .itemImg {
+                @include size(385px,
+                374px)
+            }
+            .itemText {
+                font-size: 26px;
+                color: $color-brown;
+                text-align: center;
+                margin-top: 20px;
+            }
+        }
+    }
+    .gradeNotice {
+        font-size: 36px;
+        color: $color-brown;
+        margin: 105px 0 10px;
+        text-align: center;
+    }
+    .shareBox {
+        margin: 60px 0;
+        ul {
+            @include flexCenter;
+            &.teacherGroup {
+                margin-top: 50px;
+                li {
+                    &:nth-of-type(1) {
+                        background: url('../img/teacher3.png') no-repeat center / 100% 100%;
+                        padding-top: 20px;
+                    }
+                    &:nth-of-type(2) {
+                        background: url('../img/teacher4.png') no-repeat center / 100% 100%;
+                        margin-left: 20px;
+                    }
+                }
+            }
+            li {
+                @include size(520px,
+                740px);
+                padding: 20px 60px 25px;
+                &:nth-of-type(1) {
+                    background: url('../img/teacher1.png') no-repeat center / 100% 100%;
+                    padding-top: 45px;
+                }
+                &:nth-of-type(2) {
+                    background: url('../img/teacher2.png') no-repeat center / 100% 100%;
+                    margin-left: 20px;
+                }
+            }
+        }
+        &_title {
+            font-size: 44px;
+            color: $color-brown;
+            font-weight: 900;
+            text-align: center;
+        }
+        &_img {}
+        &_time {}
     }
 }
